--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,7 @@
     text-align: center;
 }
 
+/* table images */
 .image-row{
     width: 40%;
     height: 40%;
@@ -27,7 +28,7 @@ tr:hover {
 
 /* styling of back buttons */
 .back-btn {
-  background-color: #f4511e;
+  background-color: #ee8565;
   border: none;
   color: white;
   padding: 16px 32px;
@@ -41,7 +42,12 @@ tr:hover {
   cursor: pointer;
   border-radius: 10px;
 }
+.back-btn:hover {
+  background-color: #fa3a00; 
+  color: white;
+}
 
+/* all paginations */
 .pagination a.active {
   background-color: blue;
   color: white;
@@ -66,4 +72,23 @@ tr:hover {
 table
 {
     table-layout: fixed;
+}
+
+
+/* fonts */
+.row {
+    font-family: 'Source Code Pro', monospace;
+}
+
+#profile-name {
+    font-family: 'Caveat', cursive;
+    font-size: 4em;
+}
+
+.navbar-nav  {
+    font-family: 'Merienda', cursive;
+}
+
+#search-form {
+    font-family: 'Merienda', cursive;
 }
