--- a/templates/createsighting.template.html
+++ b/templates/createsighting.template.html
@@ -1,44 +1,65 @@
-
-{% extends "index.template.html" %}
-
+{% extends "index.template.html" %} 
 
 {% block content %}
 
+<!-- create sightings form template -->
+<div class="card card-outline-secondary">
+  <div class="card-header">
+    <h3 class="mb-0">Create Sightings</h3>
+  </div>
+  <div class="card-body">
+    <form class="form" role="form" autocomplete="off" method="POST">
+      <div class="form-group row">
+        <label class="col-lg-3 col-form-label form-control-label"
+          >Species</label
+        >
+        <div class="col-lg-9">
+          <input
+            class="form-control"
+            type="text"
+            name="species"
+            required
+            maxlength="30"
+          />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-lg-3 col-form-label form-control-label"
+          >Comments</label
+        >
+        <div class="col-lg-9">
+          <input
+            class="form-control"
+            type="text"
+            name="comments"
+            maxlength="100"
+          />
+        </div>
+      </div>
 
-   <div class="card card-outline-secondary">
-                        <div class="card-header">
-                            <h3 class="mb-0">Create Sightings</h3>
-                        </div>
-                        <div class="card-body">
-                            <form class="form" role="form" autocomplete="off" method="POST">
-                                <div class="form-group row">
-                                    <label class="col-lg-3 col-form-label form-control-label">Species</label>
-                                    <div class="col-lg-9">
-                                        <input class="form-control" type="text" name="species" required>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <label class="col-lg-3 col-form-label form-control-label">Comments</label>
-                                    <div class="col-lg-9">
-                                        <input class="form-control" type="text" name="comments">
-                                    </div>
-                                </div>
+      <div class="form-group row">
+        <label class="col-lg-3 col-form-label form-control-label">Photo</label>
+        <div class="col-lg-9">
+          <input
+            class="form-control"
+            type="hidden"
+            role="uploadcare-uploader"
+            name="photos"
+          />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-lg-3 col-form-label form-control-label"></label>
+        <div class="col-lg-9">
+          <input type="submit" />
+        </div>
+      </div>
+    </form>
+  </div>
 
-                                <div class="form-group row">
-                                    <label class="col-lg-3 col-form-label form-control-label">Photo</label>
-                                    <div class="col-lg-9">
-                                        <input class="form-control" type="hidden" role="uploadcare-uploader" name="photos">
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <label class="col-lg-3 col-form-label form-control-label"></label>
-                                    <div class="col-lg-9">
-                                       <input type="submit"/>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-
-
-
-{% endblock %}
+<!-- back button -->
+<div>
+  <button class="back-btn" onclick="goBack()">Back</button>
+</div>
+  {% endblock %}
+</div>
