--- a/templates/createuser.template.html
+++ b/templates/createuser.template.html
@@ -1,5 +1,8 @@
-{% extends "index.template.html" %} {% block content %}
+{% extends "index.template.html" %} 
 
+{% block content %}
+
+<!-- create user form template -->
 <div class="card card-outline-secondary">
   <div class="card-header">
     <h3 class="mb-0">User Information</h3>
@@ -13,11 +16,11 @@
       action="{{ url_for('createuser') }}"
     >
       <div class="form-group row">
-        <label class="col-lg-3 col-form-label form-control-label"
+        <label class="col-lg-3 col-form-label form-control-label" 
           >First name</label
         >
         <div class="col-lg-9">
-          <input class="form-control" type="text" name="first_name" required />
+          <input class="form-control" type="text" name="first_name" required maxlength = "30"/>
         </div>
       </div>
       <div class="form-group row">
@@ -25,7 +28,7 @@
           >Last name</label
         >
         <div class="col-lg-9">
-          <input class="form-control" type="text" name="last_name" required />
+          <input class="form-control" type="text" name="last_name" required maxlength = "30"/>
         </div>
       </div>
 
@@ -34,7 +37,7 @@
           >Experience</label
         >
         <div class="col-lg-9">
-          <input class="form-control" type="text" name="experience" required />
+          <input class="form-control" type="text" name="experience" required maxlength = "30"/>
         </div>
       </div>
       <div class="form-group row">
@@ -47,6 +50,7 @@
             type="text"
             name="certification"
             required
+            maxlength = "30"
           />
         </div>
       </div>
@@ -85,5 +89,10 @@
     </form>
   </div>
 
+
+<!-- back button -->
+<div>
+  <button class="back-btn" onclick="goBack()">Back</button>
+</div>
   {% endblock %}
 </div>
