--- a/templates/delete.template.html
+++ b/templates/delete.template.html
@@ -1,33 +1,34 @@
-{% extends "index.template.html" %}
-
+{% extends "index.template.html" %} 
 
 {% block content %}
 
-
+<!-- delete confirmation template -->
 <div class="card card-outline-secondary">
-                        <div class="card-body">
-                            <h3 class="text-center">Are you sure?</h3>
-                            <hr>
-                            <form class="form" role="form" autocomplete="off" method="POST">
-                                <div class="form-group row">
-                                <div class="col-md-2">
-                                    </div>
-                                    <div class="col-md-4">
-                                        <button onclick="goBack()" class="btn btn-default btn-lg btn-block">Cancel</button>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <button type="submit" class="btn btn-danger btn-lg btn-block" class='delete-btn' value="Delete">Delete</button>
-                                    </div>
-                                    <div class="col-md-2">
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-
-
-
-
-
+  <div class="card-body">
+    <h3 class="text-center">Are you sure?</h3>
+    <hr />
+    <form class="form" role="form" autocomplete="off" method="POST">
+      <div class="form-group row">
+        <div class="col-md-2"></div>
+        <div class="col-md-4">
+          <button onclick="goBack()" class="btn btn-default btn-lg btn-block">
+            Cancel
+          </button>
+        </div>
+        <div class="col-md-4">
+          <button
+            type="submit"
+            class="btn btn-danger btn-lg btn-block"
+            class="delete-btn"
+            value="Delete"
+          >
+            Delete
+          </button>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+    </form>
+  </div>
+</div>
 
 {% endblock %}
