--- a/templates/profile.template.html
+++ b/templates/profile.template.html
@@ -1,5 +1,8 @@
-{% extends "index.template.html" %} {% block content %}
+{% extends "index.template.html" %} 
 
+{% block content %}
+
+<!-- profile table -->
 <div class="row">
   <div class="col-0 col-lg-2"></div>
   <div class="col-12 col-lg-8 content-lastfive">
