--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -47,7 +47,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="{{ url_for('about') }}">About</a>
       </li>
     </ul>
     <!-- search country,dive sites, species -->
