update about and table color

--- a/templates/about.template.html
+++ b/templates/about.template.html
@@ -7,10 +7,17 @@
       <p id='welcome'>Welome to LogIt</p>
       <p>
         Saw something amazing during your dive and want to keep a log on it? Introducing LogIt, the online Dive Logger application
-        created by Divers for Divers. Access LogIt from your computer, mobile and keep your dive logs online. Upload images of your sightings
+        created by Divers for Divers. 
+      </p>
+        <br>
+        <p>
+        Access LogIt from your computer, mobile and keep your dive logs online. Upload images of your sightings
         and share your dive logs to your friends! 
-
+        </p>
+        <br>
+        <p>
         Check out our resident Divers, John and Jane. Go to "Profile" and enter their emails - "JohnDoe@testing.com" and "JaneDoe@testing.com".
+        Click on the latest sightings, to see all the sightings spotted for that particular species!
       </p>
     </h1>
   </div>
