--- a/templates/alldivelogs.template.html
+++ b/templates/alldivelogs.template.html
@@ -19,7 +19,7 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="col">
+          <th class='name-header' scope="col">
             Dive Site
           </th>
           <td>
@@ -27,7 +27,7 @@
           </td>
         </tr>
         <tr>
-          <th scope="col">
+          <th class='name-header' scope="col">
             Temperature
           </th>
           <td>
@@ -35,7 +35,7 @@
           </td>
         </tr>
         <tr>
-          <th scope="col">
+          <th class='name-header' scope="col">
             Depth
           </th>
           <td>
@@ -43,7 +43,7 @@
           </td>
         </tr>
         <tr>
-          <th scope="col">
+          <th class='name-header' scope="col">
             Date
           </th>
           <td>
@@ -51,7 +51,7 @@
           </td>
         </tr>
         <tr>
-          <th scope="col">
+          <th class='name-header' scope="col">
             Comments
           </th>
           <td>
