--- a/templates/profile.template.html
+++ b/templates/profile.template.html
@@ -21,13 +21,13 @@
       </thead>
       <tbody>
         <tr>
-         <th style="text-align:center" scope="col">
+         <th class='name-header' scope="col">
             Experience
           </th>
-          <th style="text-align:center">{{database.experience}}</th>
+          <th >{{database.experience}}</th>
         </tr>
         <tr>
-        <th scope="col">
+        <th class='name-header' scope="col">
             Certification
           </th>
           <th>{{database.certification}}</th>
