--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,8 @@
 
 /* hover effect of tables */
 tr:hover {
-    background-color: #f5f5f5;
+  box-shadow: 0 0 5px #3e3e3a;
+  cursor: pointer;
 }
 
 #profile-name, #alldives {
@@ -93,6 +94,10 @@ table
     font-family: 'Merienda', cursive;
 }
 
+#allsearch-form{
+    width: 250px;
+}
+
 .intro-header {
     background-color: teal;
     border-radius: 20px;
@@ -101,4 +106,19 @@ table
 
 #welcome {
     text-align: center;
+}
+
+.email-search-input {
+    margin-left: 10px;
+    margin-bottom: 5px;
+}
+
+.email-search-btn {
+    margin-left: 10px;
+    
+}
+
+.name-header {
+    background-color: #393939;
+    color: white;
 }
