--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -40,8 +40,8 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <!-- email search -->
             <form class="form-inline my-2 my-lg-0" method="POST" action="{{ url_for('search_process') }}">
-                <input class="form-control mr-sm-2" type="search" placeholder="Email" name="useremail" aria-label="Search" required>
-                <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Let's go</button>
+                <input class="form-control mr-sm-2 email-search-input" type="search" placeholder="Email" name="useremail" aria-label="Search" required>
+                <button class="btn btn-outline-info my-2 my-sm-0 email-search-btn" type="submit">Let's go</button>
             </form>
 
         </div>
@@ -52,7 +52,7 @@
     </ul>
     <!-- search country,dive sites, species -->
     <form class="form-inline my-2 my-lg-0" id='search-form' method="POST" action="{{ url_for('search_all_process') }}">
-      <input class="form-control mr-sm-2" id="allsearch-form" type="search" placeholder="Country,Dive sites,Species" aria-label="Search" name="search" required>
+      <input class="form-control mr-sm-2" id="allsearch-form" type="search" placeholder="Country,DiveSites,Species" aria-label="Search" name="search" required>
       <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
     </form>
 
