--- a/templates/about.template.html
+++ b/templates/about.template.html
@@ -17,7 +17,10 @@
         <br>
         <p>
         Check out our resident Divers, John and Jane. Go to "Profile" and enter their emails - "JohnDoe@testing.com" and "JaneDoe@testing.com".
-        Click on the latest sightings, to see all the sightings spotted for that particular species!
+        </p>
+        <br>
+        <p>
+        Click on the latest sightings, to see all the sightings spotted for that particular specie!
       </p>
     </h1>
   </div>
