--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -22,7 +22,7 @@
 
 <!-- nav bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{{ url_for('index') }}"><img src="{{ url_for('static', filename = 'logo.png') }}"></a>
+  <a class="navbar-brand" href="{{ url_for('index') }}"><img src="{{ url_for('static', filename = 'logo.png') }}" alt="Logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -63,7 +63,7 @@
     <div class='row'>
     <div class="col-0 col-lg-2"></div>
     <div class="col-12 col-lg-8 content-lastfive">
-    <img src="static/latestsightings.png"/>
+    <img src="static/latestsightings.png" alt="latest-sightings" />
 <!-- last 5 sightings -->
 {%for r in lastentry %}
   
